@@ -1,5 +1,10 @@
 2006-06-16  Brian Warner  <warner@lothar.com>
 
+	* buildbot/test/test_steps.py (BuildStep.setUp): rmtree refactoring
+
+	* buildbot/test/runutils.py (SlaveCommandTestBase): utility class
+	for tests which exercise SlaveCommands in isolation.
+
 	* buildbot/test/test_slavecommand.py: Move some utilities like
 	SignalMixin and FakeSlaveBuilder from here ..
 	* buildbot/test/runutils.py: .. to here, so they can be used by
